--- a/design/index.html
+++ b/design/index.html
@@ -23,7 +23,7 @@
 
 	<meta name="title" content="Index of design/ &ndash; fernandovandervlist.nl" />
 	<meta name="keywords" content="
-		Projects" />
+		Design" />
 	<meta name="author" content="F. N. van der Vlist" />
 
 	<!-- external resource link tags -->
