--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<title>Index of / &ndash; fernandovandervlist.nl</title>
 
 	<meta name="title" content="Index of / &ndash; fernandovandervlist.nl" />
-	<meta name="description" content="Fernando van der Vlist (PhD Utrecht University) is Assistant Professor of Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, the Netherlands, and programme coordinator of the Master&rsquo;s Cultural Data &amp; AI. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society." />
+	<meta name="description" content="Fernando van der Vlist, PhD, is Assistant Professor of Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, the Netherlands, and programme coordinator of the Master&rsquo;s Cultural Data &amp; AI. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society." />
 	<meta name="keywords" content="
 		University of Amsterdam (UvA), Media Studies, Humanities, Amsterdam School for Cultural Analysis (ASCA), Amsterdam Institute for Humanities Research (AIHR), 
 		App Studies Initiative (ASI), Digital Methods Initiative (DMI), Public Data Lab, 
@@ -39,13 +39,13 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Index of / &ndash; fernandovandervlist.nl" />
 	<meta property="og:site_name" content="fernandovandervlist.nl" />
-	<meta property="og:description" content="Fernando van der Vlist (PhD Utrecht University) is Assistant Professor of Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, the Netherlands, and programme coordinator of the Master&rsquo;s Cultural Data &amp; AI. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society." />
+	<meta property="og:description" content="Fernando van der Vlist, PhD, is Assistant Professor of Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, the Netherlands, and programme coordinator of the Master&rsquo;s Cultural Data &amp; AI. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society." />
 
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:title" content="Index of / &ndash; fernandovandervlist.nl" />
 	<meta name="twitter:url" content="https://www.fernandovandervlist.nl/index.html" />
 	<meta name="twitter:domain" content="fernandovandervlist.nl" />
-	<meta name="twitter:description" content="Fernando van der Vlist (PhD Utrecht University) is Assistant Professor of Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, the Netherlands, and programme coordinator of the Master&rsquo;s Cultural Data &amp; AI. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society." />
+	<meta name="twitter:description" content="Fernando van der Vlist, PhD, is Assistant Professor of Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, the Netherlands, and programme coordinator of the Master&rsquo;s Cultural Data &amp; AI. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society." />
 
 	<!-- external resource link tags -->
 	<link rel="stylesheet" type="text/css" href="/Resources/css/styles.css" />
