--- a/research/index.html
+++ b/research/index.html
@@ -23,7 +23,7 @@
 
 	<meta name="title" content="Index of research/ &ndash; fernandovandervlist.nl" />
 	<meta name="keywords" content="
-		Papers" />
+		Research" />
 	<meta name="author" content="F. N. van der Vlist" />
 
 	<!-- external resource link tags -->
