--- a/contact.html
+++ b/contact.html
@@ -144,17 +144,18 @@
 			<h3>Social Links</h3>
 			<ul>
 				<li><a rel="external author" target="_blank" href="https://x.com/fvandervlist" class="ahref-text">&#x1d54f; (Twitter)</a></li>
-				<li><a rel="external author" target="_blank" href="https://aoir.social/@fvandervlist" class="ahref-text">Mastodon</a></li>
-				<li><a rel="external author" target="_blank" href="https://www.linkedin.com/in/fvandervlist" class="ahref-text">LinkedIn</a></li>
-				<li><a rel="external author" target="_blank" href="https://www.threads.net/@fvandervlist" class="ahref-text">Threads</a></li>
-				<li><a rel="external author" target="_blank" href="https://scholar.google.com/citations?user=vFkliXsAAAAJ" class="ahref-text">Google Scholar</a></li>
-				<li><a rel="external author" target="_blank" href="https://orcid.org/0000-0003-1401-0325" class="ahref-text">ORCID</a></li>
-				<li><a rel="external author" target="_blank" href="https://osf.io/m6dt9/" class="ahref-text">Open Science Framework</a></li>
-				<li><a rel="external author" target="_blank" href="https://www.zotero.org/fvandervlist" class="ahref-text">Zotero</a></li>
 				<li><a rel="external author" target="_blank" href="https://uva.academia.edu/fvandervlist" class="ahref-text">Academia</a></li>
+				<li><a rel="external author" target="_blank" href="https://www.fb.com/fernando.vandervlist" class="ahref-text">Facebook</a></li>
+				<li><a rel="external author" target="_blank" href="https://github.com/fvandervlist" class="ahref-text">GitHub</a></li>
+				<li><a rel="external author" target="_blank" href="https://scholar.google.com/citations?user=vFkliXsAAAAJ" class="ahref-text">Google Scholar</a></li>
+				<li><a rel="external author" target="_blank" href="https://www.linkedin.com/in/fvandervlist" class="ahref-text">LinkedIn</a></li>
+				<li><a rel="external author" target="_blank" href="https://aoir.social/@fvandervlist" class="ahref-text">Mastodon</a></li>
+				<li><a rel="external author" target="_blank" href="https://www.threads.net/@fvandervlist" class="ahref-text">Threads</a></li>
+				<li><a rel="external author" target="_blank" href="https://osf.io/m6dt9/" class="ahref-text">Open Science Framework</a></li>
+				<li><a rel="external author" target="_blank" href="https://orcid.org/0000-0003-1401-0325" class="ahref-text">ORCID</a></li>
 				<li><a rel="external author" target="_blank" href="https://www.researchgate.net/profile/Fernando_Van_Der_Vlist" class="ahref-text">ResearchGate</a></li>
 				<li><a rel="external author" target="_blank" href="https://www.webofscience.com/wos/author/record/GVS-1267-2022" class="ahref-text">Web of Science</a></li>
-				<li><a rel="external author" target="_blank" href="https://www.fb.com/fernando.vandervlist" class="ahref-text">Facebook</a></li>
+				<li><a rel="external author" target="_blank" href="https://www.zotero.org/fvandervlist" class="ahref-text">Zotero</a></li>
 			</ul>
 		<hr class="solid" />
 		</section>
