--- a/index.html
+++ b/index.html
@@ -671,17 +671,15 @@
 					<td class="td-icon"><span class="is-emoji">&#x1f464;</span></td>
 					<td class="td-link"><a rel="internal" href="/contact.html" class="path ahref-text">contact.html</a><br />
 						&boxvr; Card: <a rel="internal author" href="/contact.html#Card" class="path anchor ahref-text">contact.html&num;Card</a><br />
-						&boxvr; &#x1d54f; (Twitter): <a rel="external author" target="_blank" href="https://x.com/fvandervlist" class="ahref-text">&#64;fvandervlist</a><br />
-						<span class="td-link-expands">&boxvr; <i>Linked to</i> Profile: <a rel="external author" target="_blank" href="https://uu.academia.edu/fvandervlist" class="ahref-text">Academia</a><br /></span>
-						<span class="td-link-expands">&boxvr; <i>Linked to</i> Profile: <a rel="external author" target="_blank" href="https://www.fb.com/fernando.vandervlist" class="ahref-text">Facebook</a><br /></span>
-						<span class="td-link-expands">&boxvr; <i>Linked to</i> Profile: <a rel="external author" target="_blank" href="https://scholar.google.com/citations?user=vFkliXsAAAAJ" class="ahref-text">Google Scholar</a><br /></span>
-						<span class="td-link-expands">&boxvr; <i>Linked to</i> Profile: <a rel="external author" target="_blank" href="https://www.linkedin.com/in/fvandervlist" class="ahref-text">LinkedIn</a><br /></span>
+						&boxvr; <i>Linked to</i> Profile: <a rel="external author" target="_blank" href="https://scholar.google.com/citations?user=vFkliXsAAAAJ" class="ahref-text">Google Scholar</a><br />
+						&boxvr; <i>Linked to</i> Profile: <a rel="external author" target="_blank" href="https://x.com/fvandervlist" class="ahref-text">&#x1d54f; (Twitter)</a><br />
+						&boxvr; <i>Linked to</i> Profile: <a rel="external author" target="_blank" href="https://www.linkedin.com/in/fvandervlist" class="ahref-text">LinkedIn</a><br />
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> Profile: <a rel="external author" target="_blank" href="https://aoir.social/@fvandervlist" class="ahref-text">Mastodon</a><br /></span>
-						<span class="td-link-expands">&boxvr; <i>Linked to</i> Profile: <a rel="external author" target="_blank" href="https://orcid.org/0000-0003-1401-0325" class="ahref-text">ORCID</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> Profile: <a rel="external author" target="_blank" href="https://osf.io/m6dt9/" class="ahref-text">Open Science Framework</a><br /></span>
+						<span class="td-link-expands">&boxvr; <i>Linked to</i> Profile: <a rel="external author" target="_blank" href="https://orcid.org/0000-0003-1401-0325" class="ahref-text">ORCID</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> Profile: <a rel="external author" target="_blank" href="https://www.researchgate.net/profile/Fernando_Van_Der_Vlist" class="ahref-text">ResearchGate</a><br /></span>
-						<span class="td-link-expands">&boxvr; <i>Linked to</i> Profile: <a rel="external author" target="_blank" href="https://www.threads.net/@fvandervlist" class="ahref-text">Threads</a><br /></span>
 						<span class="td-link-expands">&boxur; <i>Linked to</i> Profile: <a rel="external author" target="_blank" href="https://www.zotero.org/fvandervlist" class="ahref-text">Zotero</a></span></td>
+					<td class="td-description"><a rel="internal" href="file:///Volumes/fvandervlist/Documents/fernandovandervlist.nl/Development/_fernandovandervlist.nl_Development/HTML/contact.html" class="path ahref-text">Contact</a></td>
 					<td class="td-description"><a rel="internal" href="/contact.html" class="path ahref-text">Contact</a></td>
 					<td class="td-datemodified"></td>
 					<td class="td-kind"></td>
