--- a/research/challenges-as-catalysts.html
+++ b/research/challenges-as-catalysts.html
@@ -161,7 +161,7 @@
 			<table>
 				<tr>
 					<th><span class="is-emoji">&#x1f4cb;</span>Cite (APA)</th>
-					<td id="copyCiteReference" onclick="copyEvent('copyCiteReference')" title="Click to copy reference to clipboard.">Hind, S., <mark class="is-author">van der Vlist, F.&hairsp;N.</mark>, &amp; Kanderske, M. <span class="is-date">(Accepted/In Press)</span>. Challenges as Catalysts: How Waymo&rsquo;s Open Dataset Challenges Shape AI Development. <i>AI &amp; Society: Knowledge, Culture and Communication. Springer Nature. DOI: <a rel="external" target="_blank" href="https://doi.org/10.1007/s00146-024-01927-x" class="ahref-uri">10.1007/s00146-024-01927-x</a>.</li>
+					<td id="copyCiteReference" onclick="copyEvent('copyCiteReference')" title="Click to copy reference to clipboard.">Hind, S., <mark class="is-author">van der Vlist, F.&hairsp;N.</mark>, &amp; Kanderske, M. <span class="is-date">(2024)</span>. Challenges as Catalysts: How Waymo&rsquo;s Open Dataset Challenges Shape AI Development. <i>AI &amp; Society: Knowledge, Culture and Communication. Springer Nature. DOI: <a rel="external" target="_blank" href="https://doi.org/10.1007/s00146-024-01927-x" class="ahref-uri">10.1007/s00146-024-01927-x</a>.</li>
 				</tr>
 				<tr>
 					<th><span class="is-emoji">&#x1f517;</span>Link (DOI)</th>
